<resources>
    <string name="app_name">VeriFly</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="action_settings">Settings</string>
    <string name="borrower_activity_title">Borrower Details</string>
    <string-array name="opinions">
        <item>Good</item>
        <item>Bad</item>
        <item>Average</item>
        <item>Don\'t know</item>
    </string-array>
    <string name="prefs_file">buddyPrefsFile</string>

    <!-- Layout -->
    <string name="Rs">\u20B9</string>
    <string name="front_side">FrontSide</string>
    <string name="back_side">BackSide</string>
    <string name="upload_college_id">Upload College ID</string>
    <string name="upload_address_proof">Upload Permanent Address Proof</string>
    <string name="upload_mark_sheet">Upload Mark Sheet</string>
    <string name="upload_bank_proof">Upload Bank Proofs</string>
    <string name="good_friends_prompt">Reference good friends with borrower?</string>
    <string name="reference_details">Reference Details</string>
    <string name="reference_year">Reference\'s Year</string>
    <string name="reference_dept">Reference\'s Department</string>
    <string name="reference_opinion">Reference\'s Opinion About Borrower</string>
    <string name="year_back">Does the Borrower have an year back?</string>
    <string name="two_transparent">Did you get the feeling that any of these two persons might not have been completely transparent?</string>
    <string name="loan_repay">Do you think he will repay back the loan? If yes, how much?</string>
    <string name="choose">Choose</string>
    <string-array name="loan_items">
        <item>Up to 10K</item>
        <item>Up to 30K</item>
        <item>Up to 40K</item>
        <item>No</item>
    </string-array>
    <string name="intern_choice">If it was your money, would you give him a loan?</string>
    <string name="other_notes">Other Notes (Optional)</string>
    <string name="other_notes_hint">How did it go?</string>
    <string name="matches_prompt">Does the photo match document shown by borrower?</string>
    <!-- Image Box -->
    <string name="rounded_image_view">rounded_image_view</string>
    <string name="plus_icon">plus_icon</string>
    <string name="unverified_status_icon">unverified_status_icon</string>
    <string name="verified_status_icon">verified_status_icon</string>
    <string name="invalid_status_icon">invalid_status_icon</string>

    <!-- URLs and HTTP data -->
    <string name="base_auth_token">Basic YnVkZHlhcGlhZG1pbjptZW1vbmdvc2gx</string>
    <string name="protocol_scheme">http</string>
    <string name="api_host">ninja.hellobuddy.in</string>
    <string name="login_path">api/auth/login/intern</string>
    <string name="authenticate_path">authenticate</string>
    <string name="tasks_path">api/user/verify/tasks</string>
    <string name="uploadDoc_path">api/v1/user/profile/docs/verify</string>
    <string name="uploadVerify_path">api/user/verify</string>
    <string name="password_token">api/auth/intern/passwd/token</string>
    <string name="password_set">api/auth/intern/passwd</string>
    <string name="earnings_path">api/intern/ops/earning</string>
    <string name="send_otp">api/auth/intern/sendotp</string>
    <string name="verify_otp">api/auth/intern/verifyotp</string>


    <!-- Dialog Box Texts -->
    <string name="login_dialogue">Logging In&#8230;</string>
    <string name="loading_tasks">Loading Tasks&#8230;</string>
    <string name="uploading_documents">Uploading Documents&#8230;\nPlease Do not Press Back\nOr Anywhere in the Screen</string>
    <string name="updating_data">Uploading Data&#8230;\nPlease Do not Press Back\nOr Anywhere in the Screen</string>
    <string name="upload_failed">Data Updation failed</string>
    <string name="upload_success">Documents Uploaded Successfully</string>
    <string name="invalid_creds">Incorrect username or password!</string>
    <string name="not_active">You have been freed.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="take_photo">Take a Photo</string>
    <string name="choose_photo">Choose a Photo</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="invalid_token">URL is not valid</string>
    <string name="went_wrong">Something went wrong. Please try again.</string>
    <string name="not_registered">Not a registered user.</string>
    <string name="fill_all_details">Fill all the details (or) Mark every image.</string>
    <string name="logout">Logout</string>
    <string name="onlineChat">OnlineChat</string>

    <!-- PopUp Texts -->
    <string name="college_popup">Mark Front or Back if the document matches. Mark invalid if it matches with none.
        Both Front and Back images should be uploaded if the verification has to be completed.</string>
    <string name="address_popup">Upload only if Front and Back are not present. No marking is required.</string>
    <string name="grade_popup">Upload GradeSheet if not present. <i >Mark every image as valid or invalid based on their validation.</i></string>
    <string name="bank_popup">Upload BankProof if not present. <i>Mark every image as valid or invalid based on their validation.</i></string>

    <!-- Change Passwords -->
    <string name="enter_password">Enter a password</string>
    <string name="password_length">Password should be more than 4 alphanumeric characters</string>
    <string name="please_confirm_password">Please confirm the password</string>
    <string name="do_not_match">Passwords do not match</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">Password</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="create_password">Create a Password</string>
    <string name="done">Done</string>

    <!-- Login Page -->

    <string name="enter_phone">Enter a phone number</string>
    <string name="not_phone">Enter a 10 digit valid phone number</string>
    <string name="enter_pass">Enter the password</string>


    <!-- ImageView page -->

    <string name="valid_document">Is this a valid document?</string>
    <string name="invalid">Invalid</string>
    <string name="valid">Valid</string>
    <string name="front_match">Matches Front Side</string>
    <string name="back_match">Matches Back Side</string>




</resources>
