<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:gravity="center"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/imageLayout">
        <com.github.siyamed.shapeimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:siRadius="6dp"
            android:src="@drawable/blank"
            app:siBorderWidth="1dp"
            app:siBorderColor="@color/darkGray"
            app:siSquare="true"
            android:scaleType="centerCrop"
            android:tag="@string/rounded_image_view" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/plus"
            android:layout_gravity="center"
            android:tag="@string/plus_icon" />
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/unverified"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:tag="@string/unverified_status_icon" />
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/verified"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:visibility="invisible"
            android:tag="@string/verified_status_icon" />
    </FrameLayout>
    <TextView
        android:id="@id/textView"
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="left"
        android:visibility="invisible"
        android:textAlignment="center"
        android:textColor="@color/darkGray" />
</LinearLayout>

