<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@color/colorPrimary"
     >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/login_layout">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="50dp"
        android:src="@drawable/buddylogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:id="@+id/editText"
        android:hint="@string/phone"
        android:textColorHint="#FFFFFF"
        android:inputType="number"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:maxLength="10"

         />

    <EditText
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="#FFFFFF"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/textView"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:onClick="onClick"
        android:clickable="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/forgotPassword"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/red"
        android:textSize="15sp"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:onClick="resetPassword"
        android:clickable="true" />
        </RelativeLayout>


    <!--android:textColorHint="#FFFFFF"-->
        <!--android:textColor="#FFFFFF"-->

</RelativeLayout>
