<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChangePassword"
    android:background="@color/colorPrimary"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="118dp"
        android:src="@drawable/buddylogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="30dp"
        android:text="Create a Password"/>

    <EditText
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:id="@+id/password"
        android:layout_below="@+id/text"
        android:hint="@string/new_password"
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="50dp"
        android:inputType="textPassword"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:maxLength="10"

        />

    <EditText
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColorHint="#FFFFFF"
        android:ems="10"
        android:id="@+id/confirmPassword"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_not_match"
        android:layout_alignStart="@+id/confirmPassword"
        android:layout_alignLeft="@+id/confirmPassword"
        android:layout_below="@+id/confirmPassword"
        android:visibility="invisible"
        android:textColor="@color/red"
        android:id="@+id/doNotMatch"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Done"
        android:id="@+id/textView"
        android:layout_below="@+id/doNotMatch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:padding="20dp"
        android:onClick="onClick"
        android:clickable="true" />
</RelativeLayout>

